fixed up squash coach

--- a/src/sass/config/_reset.scss
+++ b/src/sass/config/_reset.scss
@@ -15,6 +15,10 @@ body {
   padding-block-end: 0;
 }
 
+ul {
+  list-style: none;
+}
+
 ul,
 li {
   margin: 0;
